[package]
name = "futhark-bindgen"
version = "0.1.0"
edition = "2021"
default-run = "futhark-bindgen"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features=["derive"]}
serde_json = "1"
argh = {version = "0.1", optional=true}
cc = {version = "1", optional=true}

[features]
default = ["bin"]
build = ["cc"]
bin = ["argh"]

[[bin]]
name = "futhark-bindgen"
required-features = ["bin"]
path = "src/bin/main.rs"