[package]
name = "futhark-bindgen"
version = "0.1.0"
edition = "2021"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
license = "ISC"
keywords = ["futhark", "bindings", "bindgen"]
repository = "https://github.com/zshipko/futhark-bindgen"
documentation = "https://docs.rs/futhark-bindgen"
description = "Futhark binding generator"
readme = "README.md"
default-run = "futhark-bindgen"

[dependencies]
serde = {version = "1", features=["derive"]}
serde_json = "1"
argh = {version = "0.1", optional=true}
cc = {version = "1", optional=true}

[features]
default = ["bin"]
build = ["cc"]
bin = ["argh"]

[package.metadata.docs.rs]
features = ["build"]

[[bin]]
name = "futhark-bindgen"
required-features = ["bin"]
path = "src/bin/main.rs"