(rule
    (targets example.c example.h example.ml example.mli)
    (deps example.fut)
     (action
         (run cargo run -- run example.fut example.ml)))
(library
    (name example)
    (public_name futhark-bindgen-example)
    (modules example)
    (libraries ctypes ctypes.foreign)
    (library_flags -linkall)
    (foreign_stubs (language c) (names example)))
